Fixing uses wraparound

--- a/src/components/specialskills/_specialskillsdisplayitem.scss
+++ b/src/components/specialskills/_specialskillsdisplayitem.scss
@@ -30,15 +30,22 @@ span {
                 font-size: 7pt;
                 width: max-content;
             }
-            &.item-uses-container-mecha {
-                font-family: "OpenSans";
-                font-size: 8pt;
-                &.item-uses-mecha-text{
-                    line-height: .5;
-                    font-size: 8px;
-                }
-            }
         }   
+    }
+}
+
+div {
+    .item-uses-container-mecha {
+        margin-left: 10px;
+        font-family: "OpenSans";
+        font-size: 8pt;
+        width: 225px; // width can be depend on you
+        white-space: normal;
+        word-break: break-word;
+        &.item-uses-mecha-text{
+            line-height: .5;
+            font-size: 8px;
+        }
     }
 }
 span{
